Fixed a bug where the titles of the boards on the welcome screen were cut off at the bottom

--- a/src/stylesheets/fonts.css
+++ b/src/stylesheets/fonts.css
@@ -1,6 +1,5 @@
 * {
     font-family: "Inter", sans-serif;
-    line-height: 1;
 }
 
 @font-face {
